src/app/pages/hotel/hotel.component.scss
.hotel-preference-card{
    position: relative;
}
.hotel-preference-card-image-box{
    height: 172px;
    width: 100%;
    border-radius: 7px;
    display: flex;
    position: relative;
    overflow: hidden;
}
.hotel-preference-card-image-box::before{
    content: "";
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 100%);
}
.hotel-preference-card-image-box img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.hotel-preference-card-content-box{
    position: absolute;
    top: auto;
    bottom: 16px;
    left: 16px;
}
.hotel-preference-card-title{
    color: #fff;
    font-size: 16px;
    line-height: 100%;
    font-weight: 600;
    position: relative;
}
.hotel-preference-card-desc{
    color: #A3A3A3;
    font-size: 13px;
    line-height: 100%;
    font-weight: 500;
    margin-bottom: 0px;
    position: relative;
}

/* === Accomodation Card Start == */

.accomodation-card {
    border-radius: 16px;
    background-color: #fff;
    box-shadow: 0px 3.92px 15.69px 0px rgba(158,158,158,0.25);
    padding: 14px;
}
.accomodation-card-content-wrap{
    gap: 8px;
}
.accomodation-card-image-box{
    display: flex;
    width: 70px;
    height: 70px;
    border-radius: 50%;
    overflow: hidden;

}

.accomodation-card-devider{
    opacity: 1;
    border-color: #E0E0E0;
    margin-bottom: 14px;
}
.accomodation-card-image-box img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: top left;
}

.accomodation-card-title{
    font-size: 14px;
    line-height: 1.5;
    margin-bottom: 4px;
    font-weight: 600;
    color: #000;
}

.accomodation-card-footer{
    gap: 8px;
}
.accomodation-card-footer-left-part{
    gap: 8px;
}
.accomodation-card-footer-left-part-text{
    font-size: 11px;
    line-height: 100%;
    margin-bottom: 0px;
    font-weight: 500;
    color: #383838;
}
.accomodation-card-footer-left-part-circle{
    background-color: #01032b;
    width: 6px;
    height: 6px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.accomodation-card-footer-right-part-text{
    font-size: 11px;
    line-height: 100%;
    margin-bottom: 0px;
    font-weight: 500;
    color: #00AD20;
}
/* === Accomodation Card End == */


@media(max-width:991px){
    .accomodation-card-content-wrap{
        flex-direction: column;
        align-items: center !important;
        justify-content: center !important;
    }
    .accomodation-card-footer{
        flex-direction: column;
        align-items: center !important;
        justify-content: center !important;
    }
}
@media(min-width:992px){
    .hotel-preference-card-title{
        font-size: 20px;
    } 
    .accomodation-card-title{
        font-size: 21px;
    }
    .accomodation-card-image-box{
        width: 104px;
        height: 104px;
    }
    .accomodation-card-content-wrap{
        gap: 16px;
    }
}
::ng-deep .swiper-slide-shadow-cards {
  // width: min-content;
  background: transparent;
}
.package-rating-bottom-txt ul {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    padding: 0;
}
.package-facility-itel-list-wrap .package-facility-itel-list li {
    display: flex;
    align-items: center;
    flex-direction: column;
    font-size: 10px;
}
.testimonial-content-wrap.testimonial-content-wrapnewsec{
        background: url(../../../../public/assets/images/hotel/testimonial-bg-IJU4KGDE4.webp) no-repeat center center;
            background-size: cover;
}

